register with interaction peruApis

--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "@types/uuid": "^8.3.4",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
-    "date-fns": "^2.29.3",
+    "date-fns": "^3.1.0",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "generate-password": "^1.7.0",
     "js-cookie": "^3.0.1",
+    "material-react-table": "^2.5.0",
     "next": "^13.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-connect": "^0.13.0",
+    "primereact": "^10.1.1",
     "react": "18.2.0",
     "react-datalist-input": "^3.1.0",
     "react-dom": "18.2.0",
@@ -49,8 +51,11 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.15",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.8.3"
   }
 }
