--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
-    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
+    "@mui/x-charts": "^6.19.5",
     "@mui/x-date-pickers": "^6.0.1",
     "@next/bundle-analyzer": "^13.0.5",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@tiptap/extension-underline": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "@types/js-cookie": "^3.0.2",
     "@types/react-csv": "^1.1.3",
     "@types/uuid": "^8.3.4",
@@ -29,17 +33,17 @@
     "formik": "^2.2.9",
     "generate-password": "^1.7.0",
     "js-cookie": "^3.0.1",
+    "lucide-react": "^0.356.0",
     "material-react-table": "^2.5.0",
     "next": "^13.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-connect": "^0.13.0",
     "primereact": "^10.1.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-datalist-input": "^3.1.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "5.5.1",
+    "react-dom": "^18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-intl": "^6.2.5",
-    "react-quill": "^2.0.0",
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.6",
     "react-toastify": "^9.0.8",
@@ -59,3 +63,4 @@
     "typescript": "4.8.3"
   }
 }
+
